@@ -47,18 +47,22 @@ include("utils.lua")
 -- It is required to be in the same format as the do_line function:
 -- A table with an "n" key, and keys 0..n-1 with line structures.
 function default_do_syllable(meta, styles, config, line, syl)
+	aegisub.output_debug("default_do_syllable")
 	return {n=0}
 end
 do_syllable = default_do_syllable
 
 function adv_do_line(meta, styles, config, line)
+	aegisub.output_debug("adv_do_line")
 	local result = {n=0}
 	for i = 0, line.karaoke.n-1 do
+		aegisub.output_debug("adv_do_line:2:"..i)
 		local out = do_syllable(meta, styles, config, line, line.karaoke[i])
 		for j = 1, out.n do
 			table.insert(result, out[j])
 		end
 	end
+	aegisub.output_debug("adv_do_line:3")
 	return result
 end
 do_line = adv_do_line
